fix react quill spacing + add loading indicator

--- a/packages/commonwealth/client/styles/components/comments/create_comment.scss
+++ b/packages/commonwealth/client/styles/components/comments/create_comment.scss
@@ -45,8 +45,4 @@
   .token-req-text.Text {
     color: $neutral-500;
   }
-
-  .QuillEditor {
-    margin-bottom: 40px;
-  }
 }
