--- a/packages/commonwealth/client/styles/pages/view_thread/edit_body.scss
+++ b/packages/commonwealth/client/styles/pages/view_thread/edit_body.scss
@@ -12,7 +12,4 @@
     width: 100%;
   }
 
-  .QuillEditor {
-    margin-bottom: 40px;
-  }
 }
